--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "format:staged": "lint-staged",
     "pyright": "pyright --pythonpath $(echo 'import sys; print(sys.prefix)' | uv run -)/bin/python",
     "prepare": "husky install",
-    "release": "release-it"
+    "release": "release-it",
+    "release-minor": "release-it --increment minor",
+    "release-major": "release-it --increment major"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
