fix: change release condition to trigger on automatic bump (#61)
Thought I had addressed this. Must have pushed an incorrect patch :/

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Run the release
         run: |
           pnpm release
-        if: ${{ inputs.bump != 'automatic' }}
+        if: ${{ inputs.bump == 'automatic' }}
 
       - name: Run minor bump
         run: |
